--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React Starter</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro|Noto+Sans+JP:300,400,500,700&display=swap" rel="stylesheet">
   </head>
 
